--- a/DBMS_Project/LaptopShopProject/Properties/Settings.settings
+++ b/DBMS_Project/LaptopShopProject/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="ConnStr" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Data Source=TONYNYAN\TonyNyan;Initial Catalog=dbms_laptopshop;Integrated Security=True;Encrypt=True;Trust Server Certificate=True</Value>
+      <Value Profile="(Default)">Data Source=TWELVE-T\TWELVETI;Initial Catalog=LaptopStoreDB;Integrated Security=True;Trust Server Certificate=True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
